--- a/index.html
+++ b/index.html
@@ -450,8 +450,8 @@
                                             chainId: SOMNIA_CHAIN_ID_HEX,
                                             chainName: 'Somnia Testnet',
                                             nativeCurrency: {
-                                                name: 'STI',
-                                                symbol: 'STI',
+                                                name: 'STT',
+                                                symbol: 'STT',
                                                 decimals: 18
                                             },
                                             rpcUrls: ['https://dream-rpc.somnia.network'],
